argocd/manifests/memos/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
  labels:
    app.kubernetes.io/name: memos
    app.kubernetes.io/managed-by: argocd
