argocd/manifests/memos/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
    app.kubernetes.io/name: memos
spec:
  type: ClusterIP
  selector:
    app: memos
  ports:
    - name: http
      port: 5230
      targetPort: 5230
      protocol: TCP
